--- a/urbanstory/package.json
+++ b/urbanstory/package.json
@@ -7,7 +7,8 @@
     "start": "npm run storybook",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build": "build-storybook",
+    "deploy": "npm run build && cp -a storybook-static/. ../"
   },
   "keywords": [],
   "author": "",
