--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "cd urbanstory/ && npm start",
     "build": "cd urbanstory/ && npm run build",
-    "deploy": "cd urbanstory/ && npm run deploy && cd ../ && git add -A && git commit -m 'new update'"
+    "deploy": "cd urbanstory/ && npm run deploy && cd ../ && git add -A && git commit -m 'new update' && git push"
   },
   "keywords": [],
   "author": "",
