--- a/urbanstory/package.json
+++ b/urbanstory/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run storybook",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -s ./src/img -p 6006",
+    "storybook": "start-storybook -p 6006",
     "build": "build-storybook",
     "deploy": "npm run build && cp -a storybook-static/. ../"
   },
