--- a/urbanstory/package.json
+++ b/urbanstory/package.json
@@ -14,10 +14,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
-    "@storybook/html": "^5.1.8",
     "@babel/core": "^7.4.4",
-    "babel-loader": "^8.0.5"
+    "@storybook/html": "^5.1.8",
+    "babel-loader": "^8.0.5",
+    "lerna": "^3.18.3"
   }
 }
